tests/vertical-slice/reject/actor_builtin_send_no_handler.hew
// Reject: `ref.send(msg)` on a named actor without an `ActorMsg` envelope or
// `receive fn send` handler does not erase an arbitrary payload into the actor
// mailbox. The concrete handle can only use the builtin `send` surface when the
// actor declares its message envelope.
//
// Distinct from `actor_receive_fn_named_send.hew` (accept): a same-named
// handler is concrete actor dispatch and takes precedence.
actor Adder {
    var count: i64;
    receive fn increment(n: i64) {
        count = count + n;
    }
}

fn main() -> i64 {
    let a = spawn Adder(count: 0);
    a.send(10);
    0
}
